# e-nowshop-api-user

./: Dockerfile  Jenkinsfile  jenkinsfile
cid/: deployments.yaml  service.yaml
src/: .python-version  Dockerfile  app.py  config.py  exception.py  pyproject.toml  requirements.txt
src/enowshop/domain/keycloak/: keycloak.py
src/enowshop/domain/sendgrid/: client_sendgrid.py
src/enowshop/endpoints/: dependecies.py
src/enowshop/endpoints/users/: controller.py  repository.py  schema.py  service.py
src/enowshop/infrastructure/: containers.py
src/enowshop/infrastructure/database/: database_sql.py
src/enowshop/infrastructure/repositories/: repository.py
